--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1572,7 +1572,38 @@ color: white;
 CALENDAR via THEEVENTSCALENDAR PLUGIN
 *********************/
 
+table.tribe-events-calendar tbody tr:nth-child(even) {
+	background-color: #fefefe;
+}
 
+.tribe-events-calendar div[id*=tribe-events-daynum-], .tribe-events-calendar div[id*=tribe-events-daynum-] a {
+	font-size: 1.35rem;
+    color: #333;
+    text-align: right;
+    background: transparent;
+}
+
+.events-archive.events-gridview #tribe-events-content table .type-tribe_events {
+	border-bottom: 1px solid #e5e5e5;
+    margin: 0 0.25rem;
+    padding: 0.25rem 0;
+}
+
+#tribe-events-content .tribe-events-calendar div[id*=tribe-events-event-] h3.tribe-events-month-event-title {
+	font-family: ManifoldDSA-ExtraBold,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
+@media print, screen and (min-width: 40em) {
+	.tribe-events-tooltip h3 {
+		font-size: 1rem;
+		padding: 0 0.25rem;
+		font-weight: bolder;
+	}
+}
+
+.tribe-events-tooltip .tribe-events-event-body {
+	font-size: 0.9rem;
+}
 
 /******************************************************************
 PRINT STYLESHEET
